Fix Alignment of Temperature

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,20 @@ body {
     inset 10px 10px 15px rgba(70, 70, 70, 0.12);
 }
 
+.weather-temperature span {
+  color: indigo;
+  font-size: 22px;
+  font-weight: 100;
+  line-height: 25px;
+}
+
+.weather-temperature strong {
+  color: indigo;
+  font-size: 36px;
+
+  line-height: 25px;
+}
+
 .weather-temperature img {
   margin-right: 10px;
   height: 65px;
@@ -47,7 +61,7 @@ ul {
 li {
   list-style: none;
   color: indigo;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 100;
   line-height: 25px;
 }
